# temp_repo

./: .env.example  __init__.py  analyze.md  anchor_config_example.yaml  anchor_detector.py  anchor_setup_gui.py  app.py  batch_scheduler.py  color_template_detector.py  config.example.yml  config.py  database.py  heartbeat.py  lifecycle.py  logging.py  main.py  ocr_engine.py  parallel_processor.py  pyproject.toml  requirements.txt  roi_types.py  sample.java  sample.py  sql_generator.md  template_matcher.py  test.txt  video_detection_system_design.pptx  video_processor.py
storage/: __init__.py  database.py
