[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-detection"
version = "0.1.0"
description = "Industrial video monitoring system with object detection and OCR"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Video Detection Team" }
]
keywords = ["video", "detection", "ocr", "monitoring", "industrial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0,<2.0",
    "opencv-python>=4.6.0",
    "PyYAML>=6.0",
    "paddlepaddle>=2.5.0,<3.0",
    "paddleocr>=2.7.0,<3.0",
    "scikit-image>=0.21.0",
    "Pillow>=10.0.0",
    "scipy>=1.10.0",
    "oracledb>=2.0.0",
]

[project.optional-dependencies]
ocr-ensemble = [
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
